@@ -1,3 +1,7 @@
+2011-05-02 Jannis Pohlmann <jannis@xfce.org>
+
+	- Add spring and wetherelltree algorithms and the Vector class.
+
 2011-04-30  Christian Feuersaenger <ludewich@users.sourceforge.net>
 
 	- number printing: added '1000 sep in fractionals' switch
